--- a/app/views/bids/_form.html.slim
+++ b/app/views/bids/_form.html.slim
@@ -1,10 +1,5 @@
-= form_for(@bid, :html => {:class => 'form-horizontal', :role => 'form'}) do |f|
+= form_for([@user, @bid], :html => {:class => 'form-horizontal', :role => 'form'}) do |f|
   fieldset
-    .form-group
-      = f.label :username, :class => "col-lg-2 control-label"
-      .col-lg-4
-        = f.text_field :username, :class => "form-control"
-
     .form-group
       = f.label :url, :class => "col-lg-2 control-label"
       .col-lg-4
