--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,12 @@ html
         .navbar-collapse.collapse
           ul class="nav navbar-nav navbar-right"
             li = link_to 'Sign up', new_user_registration_path
+            - if user_signed_in?
+              li
+                | Signed in as 
+                = current_user.email
+            - else
+              li = link_to 'Sign in', new_user_session_path
 
       .container
         - if flash[:notice]
