--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,10 @@ html
           .navbar-brand
             = link_to 'codesy.io', root_path
         .navbar-collapse.collapse
+          ul class="nav navbar-nav"
+            - if user_signed_in?
+              li
+                = link_to 'New Bid', new_bid_path
           ul class="nav navbar-nav navbar-right"
             li
               - unless user_signed_in?
