--- a/app/views/admin/bids/index.html.slim
+++ b/app/views/admin/bids/index.html.slim
@@ -6,6 +6,8 @@ table class="table table-striped table-hover"
     th URL
     th Offer
     th Ask
+    th Created at
+    th Updated at
   tbody
     - @bids.each do |bid|
       tr
@@ -13,3 +15,5 @@ table class="table table-striped table-hover"
         td.url = link_to bid.url, bid.url
         td.offer = bid.offer
         td.ask = bid.ask
+        td.created_at = bid.created_at
+        td.updated_at = bid.updated_at
